--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 PORT=4000
-USERDB=
-PASSPORTDB=
-HOSTDB=
-PORTDB=
-DATABASE=
+USERDB=	gjznmrtb
+PASSPORTDB=K94kzXzrs1Qj4NSSKyIi4gMGYJpDKrUo
+HOSTDB=postgres://gjznmrtb:K94kzXzrs1Qj4NSSKyIi4gMGYJpDKrUo@floppy.db.elephantsql.com/gjznmrtb
+PORTDB=44f7b858-db55-4657-ab85-bd4ac4f5173b
+DATABASE=test
